# SoftRaster

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
source/: CMakeLists.txt  application.cpp  application.h  base.h  config.h  framebuffer.cpp  framebuffer.h  main.cpp  math_.cpp  pch.h  timer.cpp  window.cpp  window.h
source/core/base/: base.h
source/core/math/: math_.cpp  math_.h
source/core/utils/: timer.cpp  timer.h
source/function/application/: application.cpp  application.h
source/function/graphics/: framebuffer.h
source/function/window/: window.h
